SERVER-12592 produce intelligible error message for failed TEXT under OR planning